# gnome-speech-speechd-driver

./: AUTHORS  ChangeLog  GNOME_Speech_SynthesisDriver_Speech_Dispatcher.server.in  INSTALL  Makefile  Makefile.am  NEWS  README  build.sh  configure.in  gnome-speech-speechd-driver.texi  libspeechd.c  libspeechd.h  speechdspeaker.c  speechdspeaker.h  speechdsynthesisdriver.c  speechdsynthesisdriver.h  version.sh
